2004-10-08  Petr Tobiska <tobiska@ure.cas.cz>

	* term/metapost.trm (MP_arrow): Handle double-ended arrows also.

2004-10-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (pr_font): Release previous font every time a new one
	is requested. This feels wrong to me since we know the old font will be
	used again very soon, but otherwise there is a serious memory leak.

	* src/gplt_x11.c (PaletteMake): (Daniel Sebald <daniel.sebald@ieee.org>)
	Fix another tiny memory leak.

	* src/plot3d.c (get_3ddata): Add missing #ifdef EAM_DATASTRINGS.

	* configure.in: If --disable-datastrings is selected, then turn off 
	histogram support also since it is crippled without the 
	datastrings code.

2004-10-05  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.cyg config/config.mgw config/config.os2: Added #defines
	EAM_DATASTRINGS and EAM_HISTOGRAMS.

	* src/makefile.all: Added breaders.$(O) to COREOBJS.

2004-10-04  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_graphics): Initialize font-tracking variable at the
	start of each plot (fixes problems seen with opening multiple plot 
	windows with different default fonts).

2004-10-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/gplt_x11.c (process_event): Added missing cmd_tried = 1.

2004-10-03  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c (delete_plot): Fix small memory leak.

2004-10-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): Allow explicit pm3d palette colors for line
	and point styles in non-Cartesian mapping modes. (bug #1005775)

2004-09-30  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Change #ifdef GD2_VERS to #if (GD2_VERS >= 2) everywhere.

	* term/emf.trm (EMF_set_font) term/tgif.trm (TGIF_set_font):
	Fix longstanding problems with the set_font routines;
	interpret font requests of the form ",<size>" as a request to rescale
	the current font to <size>.

2004-09-29  Ethan Merritt  <merritt@u.washington.edu>
